// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResqueWeb Creates resque web objects 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": Object {
      "annotations": Object {
        "talis.io/chat": "https://talis.slack.com/archives/C04P9DPCX",
        "talis.io/description": "Frontend to the Resque job queue system",
        "talis.io/eks-dashboard": "None",
        "talis.io/graphs": "None",
        "talis.io/incidents": "None",
        "talis.io/issues": "https://github.com/talis/platform/issues",
        "talis.io/logs": "None",
        "talis.io/repository": "https://github.com/talis/resque-web-container",
        "talis.io/runbook": "None",
        "talis.io/uptime": "None",
        "talis.io/url": "http://resque.example.com",
      },
      "labels": Object {
        "app": "resque",
        "instance": "resque-web",
        "release": "stable",
        "role": "server",
      },
      "name": "test-resque-web-resque-web-service-c81bf306",
    },
    "spec": Object {
      "ports": Array [
        Object {
          "port": 3000,
          "protocol": "TCP",
          "targetPort": 3000,
        },
      ],
      "selector": Object {
        "app": "resque",
        "instance": "resque-web",
        "role": "server",
      },
      "type": "NodePort",
    },
  },
  Object {
    "apiVersion": "networking.k8s.io/v1",
    "kind": "Ingress",
    "metadata": Object {
      "annotations": Object {
        "alb.ingress.kubernetes.io/listen-ports": "[{\\"HTTP\\":80}]",
        "alb.ingress.kubernetes.io/load-balancer-attributes": "idle_timeout.timeout_seconds=60",
        "alb.ingress.kubernetes.io/load-balancer-name": "resque-web",
        "alb.ingress.kubernetes.io/success-codes": "200,303",
        "alb.ingress.kubernetes.io/tags": "service=resque,instance=resque-web",
        "alb.ingress.kubernetes.io/target-type": "instance",
      },
      "labels": Object {
        "app": "resque",
        "instance": "resque-web",
        "release": "stable",
        "role": "server",
      },
      "name": "test-resque-web-resque-web-ingress-c8c81984",
    },
    "spec": Object {
      "defaultBackend": Object {
        "service": Object {
          "name": "test-resque-web-resque-web-service-c81bf306",
          "port": Object {
            "number": 3000,
          },
        },
      },
      "ingressClassName": "aws-load-balancer-internal",
    },
  },
  Object {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": Object {
      "labels": Object {
        "app": "resque",
        "instance": "resque-web",
        "release": "stable",
        "role": "server",
      },
      "name": "test-resque-web-c82b282b",
    },
    "spec": Object {
      "replicas": 1,
      "revisionHistoryLimit": 1,
      "selector": Object {
        "matchLabels": Object {
          "app": "resque",
          "instance": "resque-web",
          "role": "server",
        },
      },
      "template": Object {
        "metadata": Object {
          "labels": Object {
            "app": "resque",
            "instance": "resque-web",
            "release": "stable",
            "role": "server",
          },
        },
        "spec": Object {
          "affinity": Object {
            "podAntiAffinity": Object {
              "preferredDuringSchedulingIgnoredDuringExecution": Array [
                Object {
                  "podAffinityTerm": Object {
                    "labelSelector": Object {
                      "matchLabels": Object {
                        "app": "resque",
                        "instance": "resque-web",
                        "role": "server",
                      },
                    },
                    "topologyKey": "topology.kubernetes.io/zone",
                  },
                  "weight": 100,
                },
              ],
            },
          },
          "automountServiceAccountToken": false,
          "containers": Array [
            Object {
              "image": "talis/resque-web:stable",
              "imagePullPolicy": "IfNotPresent",
              "name": "resque",
              "ports": Array [
                Object {
                  "containerPort": 3000,
                  "protocol": "TCP",
                },
              ],
              "resources": Object {
                "limits": Object {
                  "cpu": "100m",
                  "memory": "200Mi",
                },
                "requests": Object {
                  "cpu": "50m",
                  "memory": "100Mi",
                },
              },
            },
          ],
          "priorityClassName": "web",
        },
      },
    },
  },
]
`;

exports[`ResqueWeb Customizations 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": Object {
      "annotations": Object {
        "talis.io/chat": "https://talis.slack.com/archives/C04P9DPCX",
        "talis.io/description": "Frontend to the Resque job queue system",
        "talis.io/eks-dashboard": "None",
        "talis.io/graphs": "None",
        "talis.io/incidents": "None",
        "talis.io/issues": "https://github.com/talis/platform/issues",
        "talis.io/logs": "None",
        "talis.io/repository": "https://github.com/talis/resque-web-container",
        "talis.io/runbook": "None",
        "talis.io/uptime": "None",
        "talis.io/url": "https://resque-web.example.com",
      },
      "labels": Object {
        "app": "resque",
        "instance": "resque-web",
        "release": "latest",
        "role": "server",
      },
      "name": "test-resque-web-resque-web-service-c81bf306",
    },
    "spec": Object {
      "ports": Array [
        Object {
          "port": 3000,
          "protocol": "TCP",
          "targetPort": 3000,
        },
      ],
      "selector": Object {
        "app": "resque",
        "instance": "resque-web",
        "role": "server",
      },
      "type": "NodePort",
    },
  },
  Object {
    "apiVersion": "networking.k8s.io/v1",
    "kind": "Ingress",
    "metadata": Object {
      "annotations": Object {
        "alb.ingress.kubernetes.io/listen-ports": "[{\\"HTTP\\":80},{\\"HTTPS\\":443}]",
        "alb.ingress.kubernetes.io/load-balancer-attributes": "idle_timeout.timeout_seconds=60",
        "alb.ingress.kubernetes.io/load-balancer-name": "resque-web",
        "alb.ingress.kubernetes.io/ssl-policy": "ELBSecurityPolicy-TLS-1-2-2017-01",
        "alb.ingress.kubernetes.io/ssl-redirect": "443",
        "alb.ingress.kubernetes.io/success-codes": "200,303",
        "alb.ingress.kubernetes.io/tags": "service=resque,instance=resque-web",
        "alb.ingress.kubernetes.io/target-type": "instance",
      },
      "labels": Object {
        "app": "resque",
        "instance": "resque-web",
        "release": "latest",
        "role": "server",
      },
      "name": "test-resque-web-resque-web-ingress-c8c81984",
    },
    "spec": Object {
      "defaultBackend": Object {
        "service": Object {
          "name": "test-resque-web-resque-web-service-c81bf306",
          "port": Object {
            "number": 3000,
          },
        },
      },
      "ingressClassName": "aws-load-balancer-internal",
      "tls": Array [
        Object {
          "hosts": Array [
            "*.example.com",
          ],
        },
      ],
    },
  },
  Object {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": Object {
      "labels": Object {
        "app": "resque",
        "instance": "resque-web",
        "release": "latest",
        "role": "server",
      },
      "name": "test-resque-web-c82b282b",
    },
    "spec": Object {
      "replicas": 1,
      "revisionHistoryLimit": 1,
      "selector": Object {
        "matchLabels": Object {
          "app": "resque",
          "instance": "resque-web",
          "role": "server",
        },
      },
      "template": Object {
        "metadata": Object {
          "labels": Object {
            "app": "resque",
            "instance": "resque-web",
            "release": "latest",
            "role": "server",
          },
        },
        "spec": Object {
          "affinity": Object {
            "podAntiAffinity": Object {
              "preferredDuringSchedulingIgnoredDuringExecution": Array [
                Object {
                  "podAffinityTerm": Object {
                    "labelSelector": Object {
                      "matchLabels": Object {
                        "app": "resque",
                        "instance": "resque-web",
                        "role": "server",
                      },
                    },
                    "topologyKey": "topology.kubernetes.io/zone",
                  },
                  "weight": 100,
                },
              ],
            },
          },
          "automountServiceAccountToken": false,
          "containers": Array [
            Object {
              "env": Array [
                Object {
                  "name": "RAILS_ENV",
                  "value": "production",
                },
                Object {
                  "name": "RAILS_RESQUE_REDIS",
                  "value": "redis:6379",
                },
                Object {
                  "name": "SECRET_KEY_BASE",
                  "valueFrom": Object {
                    "secretKeyRef": Object {
                      "key": "SECRET_KEY_BASE",
                      "name": "resque-web-secrets",
                    },
                  },
                },
              ],
              "image": "talis/resque-web:latest",
              "imagePullPolicy": "IfNotPresent",
              "name": "resque",
              "ports": Array [
                Object {
                  "containerPort": 3000,
                  "protocol": "TCP",
                },
              ],
              "resources": Object {
                "limits": Object {
                  "cpu": "100m",
                  "memory": "200Mi",
                },
                "requests": Object {
                  "cpu": "50m",
                  "memory": "100Mi",
                },
              },
            },
          ],
          "priorityClassName": "web",
        },
      },
    },
  },
]
`;
